feat: add hook TopImage

--- a/src/styles/css/App.css
+++ b/src/styles/css/App.css
@@ -107,11 +107,22 @@ button:focus {
 }
 
 .top_img {
-  background-image: url("../../img/topImg.webp");
+  background-image: url("../../img/topImg1.webp");
   background-size: cover;
   background-position: bottom;
   height: 80vh;
   width: 100%;
+}
+
+.top_imgv2 {
+  width: 100%;
+}
+.top_imgv2 img {
+  width: 100%;
+  height: auto;
+  max-height: 80vh;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .bar_info {
